fix: input style in dark mode & add blank page

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 	margin: 0 auto;
 	padding: 2rem;
 } */
-@import url("https://cdn.syncfusion.com/ej2/material.css");
+/* @import url("https://cdn.syncfusion.com/ej2/material.css"); */
 .sidebar {
 	box-shadow: rgb(113 122 131 / 11%) 0px 7px 30px 0px;
 }
@@ -127,39 +127,4 @@ form[action$="destroy"] button {
 .pending {
 	background-color: grey;
 	border-radius: 8px;
-}
-
-.panel-light,
-.panel-dark {
-	border: 1px solid black;
-	border-radius: 4px;
-	padding: 20px;
-	margin-bottom: 10px;
-}
-.panel-light {
-	color: #222;
-	background: #fff;
-}
-
-.panel-dark {
-	color: #fff;
-	background: rgb(23, 32, 42);
-}
-
-.button-light,
-.button-dark {
-	border: 1px solid #777;
-	padding: 5px;
-	margin-right: 10px;
-	margin-top: 10px;
-}
-
-.button-dark {
-	background: #222;
-	color: #fff;
-}
-
-.button-light {
-	background: #fff;
-	color: #222;
 }
