--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,9 @@ body {
 		line-height: 1.5;
 		padding: 0.1rem 0.75rem;
 	}
+	input {
+		@apply dark:bg-[gray];
+	}
 	button,
 	select {
 		@apply dark:bg-[gray];
